--- a/caesars-windsor.html
+++ b/caesars-windsor.html
@@ -63,8 +63,8 @@
       <div class="row">
         <div class="col-12">
           <div class="casinodetail-text">
-            <h3>Caesars Windsor Hotel & Casino: A Premier Entertainment Destination</h3>
-            <p>Situated in the heart of Windsor, Ontario, Caesars Windsor Hotel &amp; Casino is a top-tier
+            <h3>Caesars Windsor Hotel & Casino: </h3>
+            <p>A Premier Entertainment Destination Situated in the heart of Windsor, Ontario, Caesars Windsor Hotel &amp; Casino is a top-tier
               entertainment and gaming destination that promises an unforgettable experience for
               visitors from Canada and beyond.</p>
             <h3>Gaming Experience:</h3>
