--- a/casino-niagara.html
+++ b/casino-niagara.html
@@ -63,8 +63,8 @@
         <div class="row">
           <div class="col-12">
             <div class="casinodetail-text">
-              <h3>Casino Niagara: A Thrilling Gaming and Entertainment Hub</h3>
-              <p>Casino Niagara, located in the heart of Niagara Falls, Ontario, is a bustling and vibrant
+              <h3>Casino Niagara:</h3>
+              <p>A Thrilling Gaming and Entertainment Hub Casino Niagara, located in the heart of Niagara Falls, Ontario, is a bustling and vibrant
                 destination that promises an exciting experience for visitors from Canada and beyond.</p>
               <h3>Gaming Experience:</h3>
               <p>Casino Niagara offers a diverse array of gaming options, making it a prime attraction for
