--- a/casino-ramaresort.html
+++ b/casino-ramaresort.html
@@ -63,8 +63,8 @@
           <div class="row">
             <div class="col-12">
               <div class="casinodetail-text">
-                <h3>Casino Rama Resort: A Premier Entertainment Destination in Ontario</h3>
-                <p>Casino Rama Resort, located in Orillia, Ontario, is a renowned gaming and entertainment
+                <h3>Casino Rama Resort:</h3>
+                <p>A Premier Entertainment Destination in Ontario Casino Rama Resort, located in Orillia, Ontario, is a renowned gaming and entertainment
                   destination that promises an exciting and diverse experience for visitors from Canada and
                   beyond.</p>
                 <h3>Gaming Experience:</h3>
