--- a/fallsview-casino.html
+++ b/fallsview-casino.html
@@ -57,6 +57,68 @@
 
   <!-- site-fallsview-end -->
 
+   <!-- site-casinodetail-start -->
+   <div class="casinodetail">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="casinodetail-text">
+            <h3>A Majestic Gaming Oasis in Niagara Falls, Ontario</h3>
+            <p>Fallsview Casino Resort is an iconic and majestic destination located in the heart of Niagara
+              Falls, Ontario. This Canadian gem is celebrated for its extraordinary gaming, lavish
+              accommodations, and an array of entertainment options that promise an unforgettable
+              experience for visitors from Canada and around the world.</p>
+            <h3>Gaming Extravaganza:</h3>
+            <p>Fallsview Casino Resort is renowned for its extensive gaming opportunities. The expansive
+              casino floor is brimming with a vast selection of slot machines, table games, and poker
+              rooms. Whether you&#39;re a novice player or an experienced gambler, you&#39;ll find the game that
+              suits your preferences. The professional and welcoming staff adds to the overall excitement
+              of the casino.</p>
+            <h3>Luxurious Accommodations:</h3>
+            <p>The resort&#39;s hotel, offering world-class accommodations, is a highlight of the experience.
+              The rooms are elegantly designed, featuring opulent furnishings, panoramic views, and a
+              range of modern amenities. Whether you choose a standard room or a lavish suite, your
+              stay is sure to be marked by comfort and luxury.</p>
+            <h3>Culinary Excellence:</h3>
+            <p>Dining at Fallsview Casino Resort is a gourmet adventure. The resort boasts numerous
+              dining establishments that range from casual to upscale. Prime Steakhouse is a must-visit
+              for a top-tier steak experience, while Ponte Vecchio offers fine Italian cuisine in an elegant
+              setting.</p>
+            <h3>Entertainment and Shows:</h3>
+            <p>Fallsview Casino Resort consistently hosts world-class live entertainment and shows. The
+              Avalon Theatre is the venue for renowned artists, comedians, and musicians, providing a
+              perfect way to round off your day of gaming. Check the event schedule to catch a live
+              performance that aligns with your visit.</p>
+            <h3>Spa and Relaxation:</h3>
+            <p>For those seeking relaxation and rejuvenation, the resort features a spa that offers a wide
+              range of treatments, including massages and facials. It&#39;s an ideal retreat to unwind after
+              your gaming adventures.</p>
+            <h3>Shopping and Amenities:</h3>
+            <p>TThe resort provides an assortment of shops where you can find everything from unique gifts
+              to high-end fashion items. Additional amenities include a fitness center and an indoor pool,
+              ideal for staying active and refreshed during your stay.</p>
+            <h3>Picturesque Location:</h3>
+            <p>SOne of the outstanding features of Fallsview Casino Resort is its location near the world-
+              famous Niagara Falls. The resort offers breathtaking views of the falls and the surrounding
+              area, adding to the enchantment of your visit.</p>
+              <h3>Conclusion:</h3>
+              <p>Fallsview Casino Resort is a premium destination for visitors from Canada and beyond,
+                offering an extraordinary blend of gaming, entertainment, luxury, and relaxation. Whether
+                you&#39;re looking to try your luck at the casino, enjoy a gourmet meal, or revel in a world-class
+                show, this resort has it all. The attentive staff, stunning surroundings, and the proximity to
+                the awe-inspiring Niagara Falls make it a top choice for those in search of a truly remarkable
+                and memorable experience. As with any resort, remember to check for the latest
+                information and updates, as offerings and events may evolve over time. Enjoy your stay at
+                Fallsview Casino Resort!</p>
+          </div>
+          <div class="resturent-button new">
+            <a href="https://fallsviewcasinoresort.com" target="_blank">Visit</a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- site-casinodetail-end -->
 
 
   <!-- site footer start -->
