--- a/hard-rock.html
+++ b/hard-rock.html
@@ -57,6 +57,64 @@
 
   <!-- site-hardrock-end -->
 
+   <!-- site-casinodetail-start -->
+   <div class="casinodetail">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="casinodetail-text">
+            <h3>Hard Rock Casino Vancouver:</h3>
+            <p>Where Entertainment Rocks in Coquitlam, British Columbia
+              Hard Rock Casino Vancouver, located in Coquitlam, British Columbia, is a vibrant and
+              electrifying destination that offers a unique fusion of gaming excitement, live
+              entertainment, and a rock &#39;n&#39; roll spirit. For visitors from Canada seeking a dose of rock and
+              roll, along with top-notch gaming, this is the place to be.</p>
+            <h3>Gaming Experience:</h3>
+            <p>The heart of Hard Rock Casino Vancouver is its energetic gaming floor, which boasts an
+              extensive selection of slot machines, table games, and poker. Whether you&#39;re a seasoned
+              player or just looking for a good time, you&#39;ll find a game that suits your style. The casino
+              staff is known for their friendly service and commitment to creating a lively atmosphere.</p>
+            <h3>Live Entertainment:</h3>
+            <p>Hard Rock Casino Vancouver is celebrated for its live entertainment. The Asylum Sound
+              Stage hosts a range of musical acts, comedy shows, and themed events. Check the event
+              schedule to see if there&#39;s a performance that aligns with your visit.</p>
+            <h3>Dining and Nightlife:</h3>
+            <p>The resort offers a variety of dining options, including the Buffet at Unlisted, The Molson
+              Canadian Theatre, and the Roadies Lounge. These venues provide a mix of culinary delights
+              and live entertainment, making your dining experience as memorable as the gaming.</p>
+            <h3>Rock &#39;n&#39; Roll Vibe:</h3>
+            <p>Hard Rock Casino Vancouver is part of the legendary Hard Rock brand, known for its rock &#39;n&#39;
+              roll heritage. You&#39;ll find iconic memorabilia, a vibrant atmosphere, and an undeniable sense
+              of music and fun that infuses the entire resort.</p>
+            <h3>Concerts and Events:</h3>
+            <p>The Molson Canadian Theatre is a prime venue for concerts and special events. It&#39;s a
+              fantastic place to catch live performances by renowned artists and bands, adding a layer of
+              thrill to your visit.</p>
+            <h3>Accommodations and Amenities:</h3>
+            <p>While the resort itself does not have a hotel, it is conveniently situated near other
+              accommodation options in Coquitlam, making it easy to find lodging during your visit.</p>
+            <h3>Location:</h3>
+            <p>Hard Rock Casino Vancouver&#39;s location in Coquitlam, just outside of Vancouver, is a great
+              base for exploring the city and the surrounding natural beauty. You&#39;re not far from outdoor
+              activities, shopping, and dining options in the Vancouver area.</p>
+              <h3>Conclusion:</h3>
+              <p>Hard Rock Casino Vancouver is a lively and dynamic destination for visitors from Canada,
+                offering a blend of gaming, live entertainment, and rock &#39;n&#39; roll spirit. Whether you&#39;re
+                looking to test your luck at the casino, enjoy live music, or immerse yourself in the energetic
+                atmosphere, this resort delivers it all. The staff&#39;s passion for creating a memorable
+                experience and the infusion of rock culture make it an ideal choice for those seeking an
+                electrifying and spirited getaway. As with any resort, remember to check for the latest
+                information and event updates, as offerings may evolve over time. Prepare to rock at Hard
+                Rock Casino Vancouver!</p>
+          </div>
+          <div class="resturent-button new">
+            <a href="https://www.hardrockcasinovancouver.com" target="_blank">Visit</a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- site-casinodetail-end -->
 
 
   <!-- site footer start -->
