--- a/riverock-casino.html
+++ b/riverock-casino.html
@@ -57,6 +57,66 @@
 
   <!-- site riverrockbanner end -->
 
+   <!-- site-casinodetail-start -->
+   <div class="casinodetail">
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="casinodetail-text">
+            <h3>River Rock Casino Resort:</h3>
+            <p>Where Luxury Meets Entertainment in Richmond, BC. Nestled along the picturesque Fraser
+              River in Richmond, British Columbia, the River Rock Casino Resort is a captivating
+              destination that seamlessly combines gaming excitement, upscale accommodations, and
+              world-class entertainment. For anyone in Canada seeking an all-encompassing resort
+              experience, River Rock Casino Resort delivers in style.</p>
+            <h3>Gaming Experience:</h3>
+            <p>River Rock Casino is renowned for its extensive gaming options. The spacious and modern
+              casino floor is filled with a wide variety of slot machines and table games. Whether you&#39;re a
+              novice or a seasoned gambler, you&#39;ll find games to suit your preferences. The casino staff is
+              known for their helpful and professional service, making every visit enjoyable.</p>
+            <h3>Luxurious Accommodations:</h3>
+            <p>The resort&#39;s hotel is a haven of luxury. The rooms are elegantly appointed, featuring plush
+              furnishings, breathtaking views, and top-notch amenities. You&#39;ll feel like royalty during your
+              stay at River Rock Casino Resort.</p>
+            <h3>Dining Excellence:</h3>
+            <p>River Rock offers an array of dining experiences that cater to diverse tastes. Tramonto
+              Restaurant is a standout choice, serving gourmet cuisine with stunning river views. For a
+              more casual atmosphere, Curve Lounge provides a relaxed setting for cocktails and light
+              bites.</p>
+            <h3>Entertainment and Shows:</h3>
+            <p>River Rock regularly hosts top-tier live entertainment, from concerts and comedy shows to
+              sporting events. The elegant 1,000-seat Show Theatre is a prime venue for a memorable
+              evening of entertainment. Check the event schedule to see if there&#39;s a performance that
+              suits your interests during your stay.</p>
+            <h3>Wellness and Spa:</h3>
+            <p>The Absolute Spa at River Rock is an oasis of relaxation. Pamper yourself with a wide range
+              of spa treatments, including massages and facials, ensuring a tranquil escape from the
+              casino floor.</p>
+            <h3>Shopping and Amenities:</h3>
+            <p>The resort offers a variety of shops where you can find unique gifts and luxury items.
+              Additionally, you can take advantage of the fitness center and indoor pool, perfect for
+              staying active and refreshed during your stay.</p>
+            <h3>Scenic Location:</h3>
+            <p>River Rock Casino Resort&#39;s location along the Fraser River provides a serene backdrop, with
+              scenic views that add to the overall ambiance. The proximity to Vancouver International
+              Airport and the city of Vancouver makes it a convenient destination for travelers.</p>
+              <h3>Conclusion:</h3>
+              <p>River Rock Casino Resort is a remarkable destination for visitors from Canada, offering a
+                combination of gaming, entertainment, opulent accommodations, and relaxation. Whether
+                you&#39;re looking to test your luck at the casino, indulge in a gourmet meal, or enjoy a world-
+                class show, this resort has it all. The attentive staff, luxurious surroundings, and serene
+                setting make it a top choice for those seeking a memorable and indulgent getaway. Be sure
+                to check for the latest information and updates, as offerings and events may evolve over
+                time. Enjoy your stay at River Rock Casino Resort!</p>
+          </div>
+          <div class="resturent-button new">
+            <a href="https://riverrock.com/vancouver-casino-resort/" target="_blank">Visit</a>
+        </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- site-casinodetail-end -->
 
 
   <!-- site footer start -->
